--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,53 @@
 	font-weight: 700;
 	border: none;
 }
+
+
+/* Update Section */
+
+.update-section{
+    padding: 175px 307px;
+    text-align: center;
+}
+
+.login-form{
+    background-color: #FFF4D6;
+    height: 200px;
+}
+.login-form input {
+	padding: 17px;
+	border: none;
+	background: #D9D9D9;
+	margin-top: 71px;
+	border-radius: 6px;
+	font-size: 18px;
+}
+.login-form button {
+	background-color: orangered;
+	border: none;
+	padding: 19px;
+	border-radius: 8px;
+	width: 135px;
+	color: white;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+
+/* Footer Section */
+
+.footer-section{
+    background-color: black;
+    height: 177px;
+    text-align: center;
+    padding-top: 70px;
+}
+
+.footer-section h2{
+    color: orangered;
+    font-size: 35px;
+}
+
+.footer-section p{
+    color: white;
+}
